update course feature in BE